<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="anel.com.mx.kgardenapp.HMActivity">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="84dp"
                android:layout_margin="40dp"
                android:fontFamily="@font/aclonica"
                android:text="@string/pregunta_sexo"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/toggleButtonMale"
                    android:layout_width="149dp"
                    android:layout_height="201dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_switch_male"
                    android:text=""
                    android:textOff=" "
                    android:textOn=" "/>

                <ToggleButton
                    android:id="@+id/toggleButtonFemale"
                    android:layout_width="149dp"
                    android:layout_height="201dp"
                    android:layout_weight="1"
                    android:background="@drawable/toggle_switch_fm"
                    android:text=""
                    android:textOff=" "
                    android:textOn=" " />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:background="@color/colorSecondaryText"
                    android:clickable="false"
                    android:text="@string/atras"
                    android:textColor="@color/colorWhiteText"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/buttonForward2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorAccent"
                    android:text="@string/siguiente"
                    android:textSize="18sp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>