<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/rootLayout"
    android:weightSum="2"
    android:background="@drawable/landscape" android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="10">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:weightSum="2" android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/LayoutIdOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/menuLayout"
                android:orientation="vertical"
                android:weightSum="3"
                >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/ico_comunica"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_comunicar_numeros"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_icon_size" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LayoutIdTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorSecondaryText"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/ico_escribe_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_escribir_numeros"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_icon_size" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/LayoutIdThree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSecondaryText"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/ico_comparar_gray"

                    android:onClick="miSeleccion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_compara_colecciones"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_icon_size" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LayoutIdFour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorSecondaryText"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/ico_iguala_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_iguala_colecciones"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_icon_size" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:id="@+id/LayoutIdFive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSecondaryText"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/ico_clasifica_gray"

                    android:onClick="miSeleccion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_clasifica_colecciones"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_icon_size" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LayoutIdSix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@color/colorSecondaryText"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/ico_sucesion_gray"
                    android:contentDescription="TODO" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_sucesion_numeros"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_icon_size" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1.5"
            android:orientation="horizontal"
            android:weightSum="2" android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/LayoutIdSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorSecondaryText"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/ico_moneda_gray"

                    android:onClick="miSeleccion" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_identifica_monedas"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_icon_size" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LayoutIdEight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@color/colorSecondaryText"
                android:orientation="vertical"
                android:weightSum="3">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1.5"
                    android:background="@drawable/ico_resolver_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/action_resuelve_problemas"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_icon_size" />
            </LinearLayout>
        </LinearLayout>





    </LinearLayout>


</LinearLayout>