<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inner_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingTop="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewContentMainOne"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewPercepcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="juego"
                    android:paddingStart="12dp"
                    android:text="@string/action_percepcion"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/text_icon_size_main_menu"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/imageViewPercepcion"
                    android:layout_width="90dp"
                    android:layout_height="140dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/percepcion"

                    android:contentDescription="@string/action_percepcion"
                    android:elevation="1dp" />


            </LinearLayout>

            <!-- segunda fila de imagenes -->


        </android.support.v7.widget.CardView>


        <!-- segundo card view -->
        <android.support.v7.widget.CardView

            android:id="@+id/cardViewContentMainTwo"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="0dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewAtencion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="juego"
                    android:paddingStart="20dp"
                    android:text="@string/action_atencion"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorSteelBlue"
                    android:textSize="@dimen/text_icon_size_main_menu"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/imageViewAtencion"
                    android:layout_width="90dp"
                    android:layout_height="140dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/atencion"

                    android:contentDescription="@string/action_atencion" />


            </LinearLayout>

            <!-- segunda fila de imagenes -->


        </android.support.v7.widget.CardView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:orientation="horizontal">

        <!-- tercer card view -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewContentMainThree"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:contentPadding="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMemoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="juego"
                    android:paddingStart="15dp"
                    android:text="@string/action_memoria"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_icon_size_main_menu"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/imageViewMemoria"
                    android:layout_width="90dp"
                    android:layout_height="140dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/memoria"

                    android:contentDescription="@string/action_memoria" />


            </LinearLayout>

            <!-- segunda fila de imagenes -->


        </android.support.v7.widget.CardView>


        <!-- cuarto card view -->
        <android.support.v7.widget.CardView
            android:id="@+id/cardViewContentMainFour"
            android:layout_width="wrap_content"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:contentPadding="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="video"
                    android:paddingStart="30dp"
                    android:text="@string/action_video"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_icon_size_main_menu"
                    android:textStyle="bold|italic" />

                <ImageView
                    android:id="@+id/imageViewVideo"
                    android:layout_width="90dp"
                    android:layout_height="140dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@drawable/image_video"

                    android:contentDescription="@string/action_video" />


            </LinearLayout>

            <!-- segunda fila de imagenes -->


        </android.support.v7.widget.CardView>


    </LinearLayout>



    <!--fin layout vertical-->
</LinearLayout>


</ScrollView>
